--- a/game/family-game/.gitattributes
+++ b/game/family-game/.gitattributes
@@ -1,1 +1,5 @@
 * text=auto
+*.exe filter=lfs diff=lfs merge=lfs -text
+*.pck filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
